Next
  - Add option to apply vmemdelay to SVGA and linear framebuffer
    modes (such as VESA BIOS modes), which reduces emulator performance
    for those modes, but allows you to emulate slower SVGA cards.
    (joncampbell123).
  - Add workaround to CPU reset logic that allows it to work correctly
    even with dynamic core. Previously, if the guest reset the system,
    the emulator would crash with an error message about an uncaught
    C++ exception because C++ exception handling doesn't work with
    dynamically generated code. (joncampbell123).
  - Correct CPUID family/model/brand values for cputype=pentium_iii.
    Add CPUID level 2, which returns "processor configuration
    descriptors", and return documented Pentium III values. Apparently
    Windows XP really REALLY cares about these configuration
    descriptors and will hang in-kernel in an infinite loop at bootup
    without these apparently really important values. This change
    makes it possible to boot Windows XP with Pentium III emulation.
    (joncampbell123).
  - Allow values of memsize to represent 4GB or more of RAM. Up to
    1TB, if Pentium PSE extensions are enabled, the memalias setting
    is 40, and "enable pse=pse40" in the conf file. Memalias maximum
    is now 40, instead of 32. Add code to provide that memory above
    the 4GB address mark when PSE is in use by the guest OS. Added
    dosbox.conf option to specify a memory file. When specified, all
    guest memory is memory-mapped from a file on disk, rather than
    allocated from host memory or host swap file. To avoid consuming
    too much RAM on the host, a memory file is REQUIRED to emulate
    memory at or above 4GB. For best performance with the memory file,
    make sure the filesystem you place it on supports sparse files,
    including Linux ext4 and Windows NTFS. (joncampbell123).
  - Fix EGA machine type to determine whether CGA RGBI or EGA RrGgBb
    display is active by vsync polarity, instead of the length of