@@ -2,7 +2,9 @@ Next
   - Add option to apply vmemdelay to SVGA and linear framebuffer
     modes (such as VESA BIOS modes), which reduces emulator performance
     for those modes, but allows you to emulate slower SVGA cards.
-    (joncampbell123).
+    Due to how some machine types are emulated, this option also enables
+    vmemdelay to affect the PC-98 linear framebuffer, Tandy & PCjr
+    video modes, as well as MDA/Hercules. (joncampbell123).
   - Add workaround to CPU reset logic that allows it to work correctly
     even with dynamic core. Previously, if the guest reset the system,
     the emulator would crash with an error message about an uncaught
